# Laptev

./: .gitignore  Cargo.toml  README.md
design/: facial_recognition.excalidraw
laptev-client/: Cargo.toml
laptev-client-ui-testing/: Cargo.toml
laptev-client-ui-testing/src/: main.rs
laptev-client/res/: README.md  colors.md
laptev-client/res/GIMP/: laptev-icon.xcf
laptev-client/src/: config.rs  configuration.rs  database.rs  error.rs  main.rs  utils.rs
laptev-client/src/data/: external.rs  internal.rs  mod.rs
laptev-host/: Cargo.toml  laptev.config  launch.sh
laptev-host/src/: config.rs  configuration.rs  data.rs  database.rs  error.rs  main.rs  motioncapture.py  utils.rs
laptev-host/src/data/: external.rs  internal.rs
laptev-host/src/web/: handler.rs  handshake.rs  mod.rs  routes_auth.rs  status.rs
src/: facedetection.rs  facerecognition.rs  main.rs  motioncapture.py  motioncapture.rs
