[package]
name = "laptev-client"
version = "0.1.0"
edition = "2021"
author = "anesthetice"

[dependencies]
lazy_static = "1.4.*"
iced = {version="0.9.*", features=["image", "tokio"]}
serde = { version = "1.0.160", features = ["derive"] }

# networking
reqwest = {version="0.11.*", features=["blocking"]} 
tokio = { version = "1.27.*", features = ["full"] }

# cryptography
rsa = {version = "0.8.2", features=["pem"]}
aes-gcm-siv = "0.11.1"
rand = "0.8.5"
iced_futures = { version = "0.6.0", features = ["tokio"] }
iced_native = "0.10.3"
