[package]
name = "laptev-client"
version = "2.0.0"
edition = "2021"
author = "anesthetice"

[dependencies]

# main
reqwest             =   {version = "0.11.23"}
iced                =   {version = "0.10.*", features = ["image"]}
iced_futures        =   {version = "0.7.*", features = ["tokio"]}
#iced_native         =   {version = "0.10.3"}
time                =   {version = "0.3.20", features = ["local-offset"]}
tokio               =   {version = "1.27.*", features = ["full"]}

# cryptography
x25519-dalek        =   {version = "2.0.*"}
aes-gcm-siv         =   {version = "0.11.*", features = ["std"]}
rand                =   {version = "0.8.*"}

# serialization, logging, error handling
serde               =   {version = "1.0.*", features = ["derive"]}
serde_json          =   {version = "1.0.*"}
bincode             =   {version = "1.3.0"}
anyhow              =   {version = "1.0.*"}
tracing             =   {version = "0.1.*"}
tracing-subscriber  =   {version = "0.3.*"}

[profile.release]
opt-level = 3
