[package]
name = "laptev-host"
version = "1.0.0"
edition = "2021"
author = "anesthetice"

[dependencies]
lazy_static = "1.4.*"

# networking
tokio = { version = "1.27.*", features = ["full"] }

# cryptography
rsa = {version = "0.8.2", features=["pem"]}
aes-gcm-siv = "0.11.1"
rand = "0.8.5"

# database
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
time = { version = "0.3.*", features = ["serde", "local-offset"]}

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"
