[package]
name = "laptev-host"
version = "2.0.0"
edition = "2021"
author = "anesthetice"

[dependencies]

# main
tokio               =   {version = "1.27.*", features = ["full"]}
axum                =   {version = "0.7.*"}

# cryptography
x25519-dalek        =   {version = "2.0.*"}
aes-gcm-siv         =   {version = "0.11.*"}
rand                =   {version = "0.8.*"}

# serialization, logging, error handling
serde               =   {version = "1.0.*", features = ["derive"]}
serde_json          =   {version = "1.0.*"}
anyhow              =   {version = "1.0.*"}
tracing             =   {version = "0.1.*"}
tracing-subscriber  =   {version = "0.3.*"}

[profile.release]
opt-level = 3

#[target.armv7-unknown-linux-gnueabihf]
#linker = "arm-none-linux-gnueabihf-gcc"
